--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
         <!--email-->
         <label>Email</label>
         <span style="color: red;" th:if="${emailInvalid}">Username Invalid.</span>
-        <input type="text" name="email" id="email" required>
+        <input type="email" name="email" id="email" required>
         <br>
         <!--Address-->
         <label>Address</label>
