--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1000/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
